# AVH-FINERPRINT-DEMO-RECAN

./: Makefile  README.md
AVH-CM7/: VHT_MPS2_Cortex-M7.cprj
AVH-CM7/Board/VHT_MPS2_Cortex-M7/: main.c
AVH-CM7/RTE/Device/CMSDK_CM7_DP_VHT/: ac6_arm.sct
AVH-CM7/RTE/_Target_1/: RTE_Components.h
AVH-CM7/RTE/_VHT_MPS2_Cortex-M7/: RTE_Components.h
finger_print/: build.sh
finger_print/finger_print_pictures/: bmp2h.c  bmp2h.elf
finger_print/include/: VF_Api.h  VF_Binary.h  VF_Feature.h  VF_Feature2.h  VF_FileIO.h  VF_GetMinutia.h  VF_GetOrientMap.h  VF_GetSingulary.h  VF_Global.h  VF_GlobalMatch.h  VF_PatternMatch.h  VF_Thin.h  win2linux.h
finger_print/src/: SyntFinger.c
fvs-0.1.1-master/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  build.sh  config.status  configure  configure.ac  libtool  version.sh
fvs-0.1.1-master/autom4te.cache/: output.0  requests  traces.0
fvs-0.1.1-master/demos/: Makefile  Makefile.am  Makefile.in  fvs_binarize.c  fvs_createtestimages.c  fvs_direction.c  fvs_enhancer.c  fvs_mask.c  fvs_matching.c  fvs_minutia.c  fvs_thinner.c
fvs-0.1.1-master/demos/.deps/: fvs_binarize.Po  fvs_createtestimages.Po  fvs_direction.Po  fvs_enhancer.Po  fvs_mask.Po  fvs_minutia.Po  fvs_thinner.Po
fvs-0.1.1-master/doc/: Doxyfile  doxygen.css  footer.html  gendoc  header.html
fvs-0.1.1-master/fingerprint_bitmaps/: README.md  finger_print.h
fvs-0.1.1-master/include/: Makefile  Makefile.am  Makefile.in  bmp.h  config.h  config.h.in  export.h  file.h  floatfield.h  fvs.h  fvstypes.h  histogram.h  image.h  imagemanip.h  img_base.h  import.h  matching.h  minutia.h
fvs-0.1.1-master/sourceinsight/: fvs-0.1.1.IAB  fvs-0.1.1.IAD  fvs-0.1.1.IMB  fvs-0.1.1.IMD  fvs-0.1.1.PFI  fvs-0.1.1.PO  fvs-0.1.1.PR  fvs-0.1.1.PRI  fvs-0.1.1.PS
fvs-0.1.1-master/src/: Makefile  Makefile.am  Makefile.in  bmp.c  config.h.in  export.c  file.c  floatfield.c  histogram.c  image.c  imagemanip.c  img_base.c  img_enhance1.c  img_morphology.c  img_thin3.c  import.c  matching.c  matching2.c  minutia.c  version.c
fvs-0.1.1-master/src/.deps/: export.Plo  file.Plo  floatfield.Plo  histogram.Plo  image.Plo  imagemanip.Plo  img_base.Plo  img_enhance1.Plo  img_morphology.Plo  import.Plo  matching.Plo  minutia.Plo  version.Plo
fvs-0.1.1-master/tools/: bmp24to8  bmp24to8.c  bmp2h  bmp2h.c  bmpcrop  bmpcrop.c
