
bin_PROGRAMS = fvs_enhancer \
	       fvs_createtestimages \
	       fvs_direction \
	       fvs_thinner \
	       fvs_minutia \
	       fvs_mask \
	       fvs_binarize

fvs_enhancer_SOURCES = fvs_enhancer.c
fvs_enhancer_LDADD = -L../src -lfvs
fvs_enhancer_LDFLAGS = -g

fvs_createtestimages_SOURCES = fvs_createtestimages.c
fvs_createtestimages_LDADD = -L../src -lfvs
fvs_createtestimages_LDFLAGS = -g

fvs_direction_SOURCES = fvs_direction.c
fvs_direction_LDADD = -L../src -lfvs
fvs_direction_LDFLAGS = -g

fvs_thinner_SOURCES = fvs_thinner.c
fvs_thinner_LDADD = -L../src -lfvs
fvs_thinner_LDFLAGS = -g

fvs_minutia_SOURCES = fvs_minutia.c
fvs_minutia_LDADD = -L../src -lfvs
fvs_minutia_LDFLAGS = -g

fvs_mask_SOURCES = fvs_mask.c
fvs_mask_LDADD = -L../src -lfvs
fvs_mask_LDFLAGS = -g

fvs_binarize_SOURCES = fvs_binarize.c
fvs_binarize_LDADD = -L../src -lfvs
fvs_binarize_LDFLAGS = -g

INCLUDES = -I../include

CLEANFILES = core *.core *~

